app-ingress/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: app-ratelimit
spec:
  rateLimit:
    average: 5
    period: 1s
