app-ingress/dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.julianorib.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
